# personalized_gto_teacher

./: .gitignore  CLAUDE.md  DEBUG-CHECKLIST.md  package.json  vercel.json
api/: solve-cpp.js  solve-postflop.js  solve-preflop.js
lib/: calibrate-solver.js  cfr-engine.js  hand-utils.js  postflop-engine.js  preflop-engine.js  test-solver.js
solver/: CMakeLists.txt  Dockerfile  railway.json
solver/include/: Card.h
solver/include/runtime/: PokerSolver.h
solver/precompute/: batch-solve.js  boards.js  import-batch.js  local-batch.js
solver/src/: Card.cpp  api_server.cpp
solver/src/compairer/: Dic5Compairer.cpp
solver/src/runtime/: PokerSolver.cpp
solver/src/solver/: BestResponse.cpp  PCfrSolver.cpp
solver/src/tools/: CommandLineTool.cpp
supabase/: profile-settings.sql  pvp-bot-action.sql  pvp-fix-v2.sql  pvp-fix.sql  pvp-game-logic.sql  pvp-heartbeat.sql  pvp-inspect.sql  pvp-room.sql  pvp-v3.sql  pvp-v4-debug.sql  pvp-v4.sql  pvp-v5.sql  pvp-v6.sql  pvp-v7-fixes.sql  pvp-v7-hotfix.sql  pvp-v7-hotfix2.sql  pvp-v7-hotfix3.sql  schema.sql  user-settings-table.sql
web/: index.html
web/css/: poker-table.css  style.css
web/data/precomputed/: index.json
web/data/precomputed/flop/: 5d_3c_2s.json  5s_4d_2c.json  5s_5d_2c.json  6d_4c_2s.json  6s_5d_3c.json  6s_6d_3c.json  7d_6c_4s.json  7s_5d_3c.json  7s_6d_5c.json  7s_6s_3d.json  7s_7d_4c.json  8d_6c_3s.json  8h_5h_3h.json  8s_7d_2c.json  8s_7d_6c.json  8s_7s_4d.json  8s_8d_2c.json  9d_8c_5s.json  9h_6h_2h.json  (+84 more)
web/js/: bot-ai.js  cash-game.js  casino-fx.js  cfr-solver.js  hand-abstraction.js  poker-core.js  poker-table-dom.js  poker-table.js  postflop-solver.js  practice.js  precomputed-lookup.js  preflop-practice.js  preflop-solver.js  profiles.js  roulette.js  slots.js  solver-cache.js  solver-worker.js  supabase-auth.js
